# crud_rust

./: .env  Cargo.toml  Dockerfile  README.md  curl_apis.sh  docker-compose.yml
migrations/: Dockerfile
migrations/2023-05-03-191231_driver_table/: down.sql  up.sql
src/: db.rs  engine.rs  error.rs  handler.rs  lib.rs  main.rs  mocking.rs  models.rs  schema.rs  tests.rs
