[package]
name = "drivers"
authors = ["Moaz bin Mokhtar <moaz.mokhtar@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
env_logger = "0.10.0"
log = "0.4.17"
dotenv = "0.15.0"
diesel = { version = "2.0.3", features = [
    "postgres",
    "chrono",
    "r2d2",
    "uuid",
] }
actix-cors = "0.6.4"
chrono = { version = "0.4.23", features = ["serde"] }
custom_error = "1.9.2"
r2d2 = "0.8.10"
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
actix-multipart = "0.6.0"
futures-util = "0.3.27"
futures = "0.3.27"
tokio = { version = "1.26.0", features = ["fs"] }
rand="0.8.5"